cmake_minimum_required( VERSION 2.4 )

FIND_PACKAGE(ITK)
IF(ITK_FOUND)
    INCLUDE(${ITK_USE_FILE})
ELSE(ITK_FOUND)
    MESSAGE(FATAL_ERROR
    "ITK not found. Please set ITK_DIR.")
ENDIF(ITK_FOUND)

ADD_EXECUTABLE(
DicomToNrrdConverter 
DicomToNrrdConverter.cxx )

TARGET_LINK_LIBRARIES( 
DicomToNrrdConverter   	
${ITK_LIBRARIES} 
)

INSTALL(
TARGETS
DicomToNrrdConverter
#LIBRARY DESTINATION lib
#ARCHIVE DESTINATION lib
RUNTIME DESTINATION bin)
